-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 5.0.0
-
None
-
072750a284 (qt-creator/qt-creator/7.0) 072750a284 (qt-creator/qt-creator/master) 072750a284 (qt-creator/tqtc-qt-creator/7.0) 072750a284 (qt-creator/tqtc-qt-creator/master) 072750a284 (qt-creator/tqtc-qt-creator/qds-3.1)
If application is being run on remote device in terminal, it doesn't report failure in output pane when it crashed.
For Gerrit Dashboard: QTCREATORBUG-27007 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
394569,2 | Fix crash reporting in output pane when remote run in terminal | 7.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |